tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__IgnoretheGlintin-AAAAAAAAAAAAAAAAAAAMyA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 3272,
  "prerequisites": [
    294
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Well this is a bad idea, but since when has that stopped you before, golems with brains, what could go wrong?\n\n§3You only need to complete one task.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Ignore the Glint in Their Eyes",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "OR",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    294
  ],
  "rewards": [],
  "tasks": []
}
