tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__LetsTryThis-AAAAAAAAAAAAAAAAAAABIA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 288,
  "prerequisites": [
    285
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Mortals. Pah. What do they know about REAL power? The voices tell me I need to focus on Alienis and Tenebrae if I want to advance. So what about food?",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Let's Try This",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    285
  ],
  "rewards": [],
  "tasks": []
}
