tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__MagicStaffCore-AAAAAAAAAAAAAAAAAAADbg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 878,
  "prerequisites": [
    266
  ],
  "properties": {
    "auto_claim": false,
    "desc": "A staff requires an extra step for crafting: Two (matching) wand cores must be combined with a primal charm, and crystal clusters to produce a staff core. (While the recipes are all similar, each type of staff core requires a separate research topic to be learned.) ",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Magic Staff Core",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    266
  ],
  "rewards": [],
  "tasks": []
}
