tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__AdeptThaumaturgy-AAAAAAAAAAAAAAAAAAAAFw==__MoreEnergeticScr-AAAAAAAAAAAAAAAAAAABCg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 266,
  "optional_prerequisites": [
    3208
  ],
  "prerequisites": [],
  "properties": {
    "auto_claim": false,
    "desc": "Those stainless steel screws don't work on these rods. Due to the huge amounts of vis those wands can carry, the screws somehow \"melt\" away. I need a material that can handle these energies. I should try energetic alloy next.\n\n§3If you are struggling to make the next wand in this step or one of the next, you should try to get more discount on your gear.\n\nAlso look at the various caps, the better ones are more expensive to craft but give discounts or other benefits. In many situations you might need to start with cheap ones and only make the better caps later.\n\nYou can also improve your wand with augmentations.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "More Energetic Screws to Finish the New Wand",
    "party_single_reward": false,
    "quest_logic": "OR",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "rewards": [],
  "tasks": []
}
